compiler/parser/src/snapshots/rustpython_parser__parser__tests__dict_unpacking.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..25,
    custom: (),
    node: Dict {
        keys: [
            Some(
                Located {
                    range: 1..4,
                    custom: (),
                    node: Constant {
                        value: Str(
                            "a",
                        ),
                        kind: None,
                    },
                },
            ),
            None,
            Some(
                Located {
                    range: 16..19,
                    custom: (),
                    node: Constant {
                        value: Str(
                            "d",
                        ),
                        kind: None,
                    },
                },
            ),
        ],
        values: [
            Located {
                range: 6..9,
                custom: (),
                node: Constant {
                    value: Str(
                        "b",
                    ),
                    kind: None,
                },
            },
            Located {
                range: 13..14,
                custom: (),
                node: Name {
                    id: "c",
                    ctx: Load,
                },
            },
            Located {
                range: 21..24,
                custom: (),
                node: Constant {
                    value: Str(
                        "e",
                    ),
                    kind: None,
                },
            },
        ],
    },
}
