compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_bool_op_and.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..7,
    custom: (),
    node: BoolOp {
        op: And,
        values: [
            Located {
                range: 0..1,
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Load,
                },
            },
            Located {
                range: 6..7,
                custom: (),
                node: Name {
                    id: "y",
                    ctx: Load,
                },
            },
        ],
    },
}
