compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_bool_op_or.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..6,
    custom: (),
    node: BoolOp {
        op: Or,
        values: [
            Located {
                range: 0..1,
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Load,
                },
            },
            Located {
                range: 5..6,
                custom: (),
                node: Name {
                    id: "y",
                    ctx: Load,
                },
            },
        ],
    },
}
