compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_dict_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..19,
    custom: (),
    node: DictComp {
        key: Located {
            range: 1..3,
            custom: (),
            node: Name {
                id: "x1",
                ctx: Load,
            },
        },
        value: Located {
            range: 5..7,
            custom: (),
            node: Name {
                id: "x2",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    range: 12..13,
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    range: 17..18,
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
