compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_f_string.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..14,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..14,
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            range: 0..14,
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
