compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_generator_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..14,
    custom: (),
    node: GeneratorExp {
        elt: Located {
            range: 1..2,
            custom: (),
            node: Name {
                id: "x",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    range: 7..8,
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    range: 12..13,
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
