compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_if_elif_else.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..28,
        custom: (),
        node: If {
            test: Located {
                range: 3..4,
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
            body: [
                Located {
                    range: 6..8,
                    custom: (),
                    node: Expr {
                        value: Located {
                            range: 6..8,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    10,
                                ),
                                kind: None,
                            },
                        },
                    },
                },
            ],
            orelse: [
                Located {
                    range: 9..28,
                    custom: (),
                    node: If {
                        test: Located {
                            range: 14..15,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        body: [
                            Located {
                                range: 17..19,
                                custom: (),
                                node: Expr {
                                    value: Located {
                                        range: 17..19,
                                        custom: (),
                                        node: Constant {
                                            value: Int(
                                                20,
                                            ),
                                            kind: None,
                                        },
                                    },
                                },
                            },
                        ],
                        orelse: [
                            Located {
                                range: 26..28,
                                custom: (),
                                node: Expr {
                                    value: Located {
                                        range: 26..28,
                                        custom: (),
                                        node: Constant {
                                            value: Int(
                                                30,
                                            ),
                                            kind: None,
                                        },
                                    },
                                },
                            },
                        ],
                    },
                },
            ],
        },
    },
]
