compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_if_else_generator_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..26,
    custom: (),
    node: GeneratorExp {
        elt: Located {
            range: 1..14,
            custom: (),
            node: IfExp {
                test: Located {
                    range: 6..7,
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
                body: Located {
                    range: 1..2,
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Load,
                    },
                },
                orelse: Located {
                    range: 13..14,
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    range: 19..20,
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    range: 24..25,
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
