compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_kwds.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 46,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 46,
                    },
                ),
                custom: (),
                node: Call {
                    func: Located {
                        location: Location {
                            row: 1,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 4,
                            },
                        ),
                        custom: (),
                        node: Name {
                            id: "func",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 5,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 10,
                                },
                            ),
                            custom: (),
                            node: Name {
                                id: "token",
                                ctx: Load,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 12,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 22,
                                },
                            ),
                            custom: (),
                            node: Name {
                                id: "serializer",
                                ctx: Load,
                            },
                        },
                    ],
                    keywords: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 24,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 37,
                                },
                            ),
                            custom: (),
                            node: KeywordData {
                                arg: Some(
                                    "incref",
                                ),
                                value: Located {
                                    location: Location {
                                        row: 1,
                                        column: 31,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 37,
                                        },
                                    ),
                                    custom: (),
                                    node: Name {
                                        id: "incref",
                                        ctx: Load,
                                    },
                                },
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 39,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 45,
                                },
                            ),
                            custom: (),
                            node: KeywordData {
                                arg: None,
                                value: Located {
                                    location: Location {
                                        row: 1,
                                        column: 41,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 45,
                                        },
                                    ),
                                    custom: (),
                                    node: Name {
                                        id: "kwds",
                                        ctx: Load,
                                    },
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
]
